@@ -1,2 +1,39 @@
 # 学习记录
 Hive源码编译及阅读修改调试：https://my.oschina.net/kavn/blog/867314
+
+1、Hive安装与上线
+
+ 1.1测试环境
+
+       路径：$HIVE_HOME=/export/App/apache-hive-1.2.1-bin
+
+       mysql数据库信息可以在配置文件$HIVE_HOME/conf/hive-site.xml文件中查看，第一次安装需要初始化Hive元数据库，创建Hive的元数据库hive_metastore，执行命令$HIVE_HOME/bin/schematool -dbType mysql -initSchema
+
+ 1.2编译
+
+       window使用git-bash编译源码需要安装本地maven，打开git-bash界面，进入hive的根目录，
+
+       hive-2.1.1编译：mvn clean package -DskipTests -Pdist
+       hive-1.2.1编译：mvn clean package -Pdist -Phadoop-2 -Dmaven.test.skip=true
+       如果中间发生编译所需内存不足时，执行以下命令即可：
+       export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+ 1.3上线
+
+      每次替换$HIVE_HOME/lib包就行
+
+      停服务：ps -ef|grep Hive 查看HiveMetastore和HiveServer2的服务，使用kill -9 pid方式停服务
+
+      启动服务：./$HIVE_HOME/bin/start-metastore.sh和./$HIVE_HOME/bin/startserver.sh
+
+ 
+
+2、thrift资料和编译
+
+ 2.1资料：
+
+ https://www.ibm.com/developerworks/cn/java/j-lo-apachethrift/
+ https://blog.csdn.net/houjixin/article/details/42779835
+ http://jnb.ociweb.com/jnb/jnbJun2009.html
+ 2.2IDEA集成thrift插件进行thrift编译
+
+ http://blog.csdn.net/x369201170/article/details/51604284
